# Space-Mate

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  Spacemate  VIVA_SUMMARY.txt  build.bat  build.sh  command.txt  main.cpp  mainwindow_moc.cpp  run.md  run_spacemate.cmd  run_spacemate.sh  setup.sh  setup_display.sh  spacemate.bat
Documentation/: CHANGELOG.md  CMakeLists.txt  command.txt
Space-Mate/: Makefile  README.md  main.cpp  setup.sh
Space-Mate/core/: backup_manager.cpp  cleanup_manager.cpp  disk_monitor.cpp  file_analyzer.cpp  utils.cpp
Space-Mate/include/: backup_manager.h  cleanup_manager.h  disk_monitor.h  file_analyzer.h  utils.h
Space-Mate/tests/: run_tests.sh
core/: backup_manager.cpp  cleanup_manager.cpp  disk_monitor.cpp  file_analyzer.cpp  utils.cpp
docs/: OVERVIEW_SHORT.md
gui/: custom_types.h  guimain.cpp  mainwindow.cpp  mainwindow.h  scan_results.h
include/: backup_manager.h  cleanup_manager.h  disk_monitor.h  file_analyzer.h  utils.h
shell/: build.bat  run_gui.sh  run_spacemate.cmd  spacemate.bat
tests/: run_tests.sh
